add notification for websocket